feat: 实现 vim 风格的行级可视模式 (linewise visual mode)
从 PR #40 合并 LineRegion 实现，添加类似 vim 的 V 键整行选择功能：

- 添加 LineRegion 类，实现完整行选择逻辑
  * selection_in_line() 总是返回 (0, maxx) 选择整行
  * 继承 MarkedRegion 支持 page_up/page_down 和 o/O 切换
- 更新 region_types 和 mode_types 映射以支持 'line' 模式
- 添加 V 键快捷键绑定到 set_mode line
- 更新所有配置文件以支持新模式

用户现在可以：
- 按 v 进入 visual 模式（字符流选择）
- 按 V 进入 line 模式（整行选择）
- 按 Ctrl+v 进入 block 模式（列块选择）

--- a/grab-vim.conf.example
+++ b/grab-vim.conf.example
@@ -50,6 +50,7 @@ map Ctrl+e scroll down
 #: Cursor stays in the same position relative to the screen.
 
 map v                 set_mode visual
+map V                 set_mode line
 map Ctrl+v            set_mode block
 map Ctrl+Left_Bracket set_mode normal
 map Escape            set_mode normal
