feat: 实现 vim 风格的 yy 命令支持（operator + motion 模式）
为 kitty_grab 添加 vim 风格的 yank operator，允许用户在 normal 模式下：
- 按 y 进入 operator-pending 状态
- 再按 y 复制当前整行并退出

核心改动：
- 引入 pending_operator 状态机制来支持 operator + motion 模式
- 实现 yank_line() 使用 LineRegion 确保复制完整行内容
- 保持向后兼容：visual/line/block 模式下 y 仍然表现为复制选中内容

技术架构：
- 新增 _handle_pending_operator() 方法处理 pending 状态
- 为将来扩展 yj/yk/yw 等 motion 预留了扩展点
- 遵循 vim 的 operator + motion 语法规则

用户价值：
- 符合 vim 用户肌肉记忆，无需学习新的操作方式
- 减少按键次数，提升文本复制效率（yy vs v+选择+y）
- 为后续支持更多 vim motion 奠定基础

--- a/grab-vim.conf.example
+++ b/grab-vim.conf.example
@@ -20,9 +20,13 @@
 #: Exit the grabber without copying anything.
 
 # map Enter confirm
-map y confirm
+# map y confirm
 
 #: Copy the selected region to clipboard and exit.
+#: NOTE: y is now bound to start_yank by default (vim-like operator).
+#:       Press yy to yank current line in normal mode.
+#:       In visual mode, y still works as confirm (copy and exit).
+#:       Uncomment the line above if you prefer the old behavior.
 
 map h           move left
 map l           move right
