feat: 实现 Neovim 风格的 Y 命令（y$ - 复制到行尾）
实现细节：
- 添加 yank_to_eol() 方法，复制从光标位置到行尾
- 使用 StreamRegion 选择光标到行尾的文本范围
- 复用 last_nonwhite() 的逻辑计算行尾位置
- 与传统 vim 的 Y=yy 不同，采用 Neovim 的 Y=y$ 语义
  （与 D、C 命令保持一致）

新增快捷键：
- Y: 复制从光标位置到行尾的文本并退出

涉及文件：
- _grab_ui.py: 实现 yank_to_eol() 方法
- kitten_options_definition.py: 添加快捷键定义
- kitten_options_utils.py: 添加参数处理函数
- kitten_options_types.py: 添加键位映射
- grab-vim.conf.example: 更新文档说明

--- a/grab-vim.conf.example
+++ b/grab-vim.conf.example
@@ -28,6 +28,11 @@
 #:       In visual mode, y still works as confirm (copy and exit).
 #:       Uncomment the line above if you prefer the old behavior.
 
+# map Y           yank_to_eol
+
+#: Yank to end of line (Neovim Y command, equivalent to y$).
+#: Copies text from cursor position to end of current line.
+
 map h           move left
 map l           move right
 map k           move up
