feat: 实现 vim 风格的 e 命令（移动到单词末尾）
补全 vim 单词导航三件套（w/b/e），使用户能够：
- 在 normal 模式使用 e 键移动到当前或下一个单词的末尾
- 使用 ye operator+motion 组合复制到单词末尾

实现要点：
- word_end() 方法处理单词中间、末尾、空白、跨行等边界情况
- 使用 wcswidth() 正确计算宽字符的显示位置
- 在配置文件、参数解析和文档中添加完整支持

改动文件：
- _grab_ui.py: 实现 word_end() 方法和 motion_map 映射
- grab-vim.conf.example: 添加 e 键绑定
- kitten_options_utils.py: 添加 'word end' 方向支持
- kitten_options_definition.py: 更新 ye 命令文档

--- a/grab-vim.conf.example
+++ b/grab-vim.conf.example
@@ -46,6 +46,7 @@ map g           move top
 map G           move bottom
 map b           move word left
 map w           move word right
+map e           move word end
 
 #: Move the cursor around the screen.
 #: This will scroll the buffer if needed and possible.
